--- a/services/company-service/pom.xml
+++ b/services/company-service/pom.xml
@@ -94,6 +94,13 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Documentation -->
         <dependency>
             <groupId>org.springdoc</groupId>
