--- a/shared/shared-domain/pom.xml
+++ b/shared/shared-domain/pom.xml
@@ -20,6 +20,12 @@
     <description>Shared domain models, base entities, and common domain logic</description>
 
     <dependencies>
+        <!-- Spring Data JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <!-- Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
