--- a/pom.xml
+++ b/pom.xml
@@ -84,28 +84,30 @@
         <module>shared/shared-infrastructure</module>
         <module>shared/shared-security</module>
 
-        <!-- Service modules -->
+        <!-- Service modules (Active) -->
         <module>services/user-service</module>
         <module>services/contact-service</module>
         <module>services/company-service</module>
-        <module>services/notification-service</module>
-        <module>services/hr-service</module>
-        <module>services/inventory-service</module>
-        <module>services/procurement-service</module>
-        <module>services/order-service</module>
-        <module>services/logistics-service</module>
-        <module>services/production-service</module>
-        <module>services/financial-service</module>
-        <module>services/payment-service</module>
-        <module>services/billing-service</module>
-        <module>services/analytics-service</module>
+        
+        <!-- Service modules (Coming Soon - Uncomment when created) -->
+        <!--<module>services/notification-service</module>-->
+        <!--<module>services/hr-service</module>-->
+        <!--<module>services/inventory-service</module>-->
+        <!--<module>services/procurement-service</module>-->
+        <!--<module>services/order-service</module>-->
+        <!--<module>services/logistics-service</module>-->
+        <!--<module>services/production-service</module>-->
+        <!--<module>services/financial-service</module>-->
+        <!--<module>services/payment-service</module>-->
+        <!--<module>services/billing-service</module>-->
+        <!--<module>services/analytics-service</module>-->
 
-        <!-- Infrastructure modules -->
-        <module>infrastructure/api-gateway</module>
-        <module>infrastructure/service-discovery</module>
-        <module>infrastructure/config-server</module>
-        <module>infrastructure/message-broker</module>
-        <module>infrastructure/event-store</module>
+        <!-- Infrastructure modules (Coming Soon - Uncomment when created) -->
+        <!--<module>infrastructure/api-gateway</module>-->
+        <!--<module>infrastructure/service-discovery</module>-->
+        <!--<module>infrastructure/config-server</module>-->
+        <!--<module>infrastructure/message-broker</module>-->
+        <!--<module>infrastructure/event-store</module>-->
     </modules>
 
     <dependencyManagement>
