feat(backend): Implement Contact Service integration and fix critical issues
Major Changes:
- Fixed database migration conflicts in Contact Service
- Implemented Contact Service integration for Company Service
- Added DomainEventPublisher with Kafka support
- Enhanced security controls with authorization checks
- Improved NotificationService with Kafka messaging
- Fixed soft delete implementation across all repositories
- Updated event entities to new schema (owner_id/owner_type)
- Added secure verification code generation (SecureRandom)
- Resolved POM parent reference issues
- Added Feign client dependencies and configurations

Technical Improvements:
- Added @Modifying and @Transactional annotations to repository methods
- Implemented proper soft delete queries with isDeleted checks
- Created ContactServiceClient for inter-service communication
- Added CompanyContactService and CompanyContactController
- Fixed API path inconsistencies
- Added Kafka topic configurations for event-driven architecture

All services (Contact, User, Company) now build successfully with full integration.

--- a/services/company-service/src/main/resources/application.yml
+++ b/services/company-service/src/main/resources/application.yml
@@ -53,6 +53,12 @@ spring:
     validate-on-migrate: true
 
 # =============================================================================
+# EXTERNAL SERVICES CONFIGURATION
+# =============================================================================
+contact-service:
+  url: ${CONTACT_SERVICE_URL:http://localhost:8082}
+
+# =============================================================================
 # CACHE CONFIGURATION
 # =============================================================================
 spring:
