--- a/shared/shared-domain/pom.xml
+++ b/shared/shared-domain/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
 
+        <!-- Kafka for event publishing -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
