feat(company-service): complete company management implementation
BREAKING CHANGE: None

Features:
* Add CompanyController with 11 endpoints (CRUD, search, settings, subscription)
* Add CompanyUserController with 5 endpoints (user management, sync)
* Implement CQRS with 7 commands and 4 queries
* Add event sourcing (Kafka producer + event store)
* Integrate User Service via Feign client
* Add multi-tenancy support with tenant context
* Implement Redis caching with eviction strategy

Architecture:
* Repository: CompanyRepository with tenant-aware queries
* Services: CompanyService, CompanyUserService
* Command Handlers: 7 handlers for write operations
* Query Handlers: 4 handlers for read operations with caching
* DTOs: 5 request/response classes with validation

Domain:
* Company aggregate with JPA annotations
* 4 value objects (CompanyName, CompanyStatus, CompanyType, Industry)
* 3 domain events (Created, Updated, Deleted)
* 4 custom exceptions

Infrastructure:
* Event: CompanyEventPublisher, DomainEventPublisher, CompanyEventStore
* Security: TenantContext, TenantInterceptor, SecurityConfig
* Config: WebConfig with interceptor registration
* Client: UserServiceClient for service integration

Technical:
* Add Hypersistence Utils dependency for JSONB support
* Add @Entity and @Column annotations to Company
* Add @Embeddable to CompanyName value object
* Implement global exception handler
* Add method-level security annotations

Documentation:
* Add comprehensive README with API examples
* Document architecture and deployment guide

--- a/services/company-service/pom.xml
+++ b/services/company-service/pom.xml
@@ -82,6 +82,13 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
+        <!-- Hibernate Types for JSONB support -->
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-60</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
         <!-- Cache -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
