--- a/services/company-service/src/main/resources/application.yml
+++ b/services/company-service/src/main/resources/application.yml
@@ -58,6 +58,9 @@ spring:
 contact-service:
   url: ${CONTACT_SERVICE_URL:http://localhost:8082}
 
+user-service:
+  url: ${USER_SERVICE_URL:http://localhost:8081}
+
 # =============================================================================
 # CACHE CONFIGURATION
 # =============================================================================
