--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -1,55 +1,61 @@
 # =============================================================================
-# USER SERVICE DOCKERFILE
+# USER SERVICE DOCKERFILE - SIMPLIFIED & FAST
 # =============================================================================
-# Multi-stage build for optimized production image
+# Simple two-stage build for faster deployment
 
-# Build stage
-FROM maven:3.9.6-openjdk-21-slim AS build
+# =============================================================================
+# Stage 1: Build (Simplified)
+# =============================================================================
+FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 
-# Set working directory
-WORKDIR /app
+WORKDIR /build
 
-# Copy parent POM and shared modules
+# Copy everything needed for build
 COPY pom.xml .
-COPY shared/ ./shared/
+COPY shared/ shared/
+COPY services/user-service/ services/user-service/
 
-# Copy service POM
-COPY services/user-service/pom.xml ./services/user-service/
+# Build the service (Maven reactor will handle shared modules automatically)
+RUN mvn clean package -pl services/user-service -am -DskipTests -B
 
-# Download dependencies (this layer will be cached)
-RUN mvn dependency:go-offline -f services/user-service/pom.xml
+# =============================================================================
+# Stage 2: Runtime Image (Minimal)
+# =============================================================================
+FROM eclipse-temurin:21-jre-alpine
 
-# Copy service source code
-COPY services/user-service/src ./services/user-service/src
-
-# Build the application
-RUN mvn clean package -f services/user-service/pom.xml -DskipTests
-
-# Runtime stage
-FROM openjdk:21-jre-slim
-
-# Install curl for health checks
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install required tools
+RUN apk add --no-cache curl netcat-openbsd bash && rm -rf /var/cache/apk/*
 
 # Create non-root user
-RUN groupadd -r fabricuser && useradd -r -g fabricuser fabricuser
+RUN addgroup -g 1001 -S fabricuser && \
+    adduser -u 1001 -S fabricuser -G fabricuser
 
 # Set working directory
 WORKDIR /app
 
-# Copy the built JAR
-COPY --from=build /app/services/user-service/target/user-service-*.jar app.jar
+# Copy the JAR from build stage
+COPY --from=build /build/services/user-service/target/user-service-1.0.0-SNAPSHOT.jar app.jar
+
+# Copy entrypoint script
+COPY scripts/docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # Change ownership
 RUN chown -R fabricuser:fabricuser /app
+
+# Switch to non-root user
 USER fabricuser
 
-# Expose port
-EXPOSE 8081
+# Expose application port and JMX port
+EXPOSE 8081 9010
 
-# Health check
+# Health check with liveness probe
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:8081/api/v1/users/actuator/health || exit 1
+    CMD curl -f http://localhost:8081/api/v1/users/actuator/health/liveness || exit 1
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Set environment variables
+ENV SPRING_APPLICATION_NAME=user-service
+ENV SERVER_PORT=8081
+
+# Use custom entrypoint
+ENTRYPOINT ["/docker-entrypoint.sh"]
