--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
                 <artifactId>flyway-core</artifactId>
                 <version>${flyway.version}</version>
             </dependency>
+            
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-database-postgresql</artifactId>
+                <version>${flyway.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.zaxxer</groupId>
