feat: company-user ilişkisi ve event işleme; hardcoded değerleri konfigüre et; gereksiz dokümanları temizle
- company-service:
  - CompanyUser entity ve CompanyUserRepository eklendi
  - CompanyUserService: add/reactivate/deactivate/updateRole mantığı eklendi

- user-service:
  - ContactEventListener: doğrulanan kontağı olan kullanıcıyı otomatik aktive et
  - CompanyEventListener: generic event parse + created/updated/deleted handler’ları; silinen şirket için kullanıcıları deactivate et
  - UUID parse güvenli hale getirildi (Invalid UUID guard)
  - User entity’de gereksiz log kullanımını kaldır; deprecated method uyarısını sadeleştir
  - UserService: company filtre notları eklendi (ilişki Company Service’de)

- shared:
  - TokenConstants ve NotificationConstants eklendi

- contact-service:
  - NotificationService: subject/template/expiry konfigürasyona taşındı
  - application.yml: notification.code-expiry-minutes eklendi

- user-service (security/reset):
  - PasswordResetToken: expiry/attempts konfigüre edilebilir; ThreadLocalRandom ile güvenli kod üretimi

- config:
  - user-service ve contact-service application.yml güncellendi

- test:
  - E2E Authentication: gereksiz TODO/disabled multi-contact bloğu temizlendi
  - PasswordResetToken repo testi: eski migration TODO kaldırıldı

- docs:
  - eski/geçici dokümanlar silindi (DOCUMENTATION_ANALYSIS.md, IMPLEMENTATION_COMPLETE.md, REFACTORING_SUMMARY.md, analysis/*, HARDCODED_VALUES_REFACTORING.md)

--- a/services/contact-service/src/main/resources/application.yml
+++ b/services/contact-service/src/main/resources/application.yml
@@ -99,16 +99,22 @@ server:
   servlet:
     context-path: /api/v1/contacts
 
-# Kafka Topics Configuration
+# =============================================================================
+# KAFKA TOPICS CONFIGURATION
+# =============================================================================
 kafka:
   topics:
     email-notifications: email-notifications
     sms-notifications: sms-notifications
     contact-events: contact-events
 
-# Notification Configuration
+# =============================================================================
+# NOTIFICATION CONFIGURATION
+# =============================================================================
 notification:
   enabled: ${NOTIFICATION_ENABLED:true}
+  code-expiry-minutes: 15 # How long verification codes are valid
+  sender-name: "Fabric Management System"
 
 # =============================================================================
 # MANAGEMENT & MONITORING
