--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -106,6 +106,17 @@ jwt:
   refresh-expiration: 604800000 # 7 days
 
 # =============================================================================
+# TOKEN CONFIGURATION
+# =============================================================================
+token:
+  password-reset:
+    expiry-minutes: 15 # Password reset token expiry time
+    attempts: 3 # Maximum attempts for password reset
+  verification:
+    expiry-minutes: 15 # Verification code expiry time
+    attempts: 5 # Maximum attempts for verification
+
+# =============================================================================
 # MANAGEMENT & MONITORING
 # =============================================================================
 management:
