--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -117,6 +117,22 @@ token:
     attempts: 5 # Maximum attempts for verification
 
 # =============================================================================
+# RESILIENCE4J CONFIGURATION
+# =============================================================================
+resilience4j:
+  circuitbreaker:
+    instances:
+      contact-service:
+        failureRateThreshold: 50
+        waitDurationInOpenState: 30s
+        slidingWindowSize: 10
+  retry:
+    instances:
+      contact-service:
+        maxAttempts: 3
+        waitDuration: 1s
+
+# =============================================================================
 # MANAGEMENT & MONITORING
 # =============================================================================
 management:
